Agrega .gitignore para Django, React y Docker, y actualizaciones

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,55 @@
-# Ignorar variables de entorno y entornos virtuales
-.env
+# Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+*.pyc
+*.pdb
+*.egg-info/
+*.eggs/
+dist/
+build/
+*.so
+*.sqlite3
+
+# Django
+*.log
+*.pot
+*.pyc
+local_settings.py
+db.sqlite3
+media/
+staticfiles/
+static/
+
+# Virtual environments (Ignorar variables de entorno y entornos virtuales)
 venv/
 venv_nuevo/
+.env
+
+# VS Code
+.vscode/
+
+# Node.js
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# React / frontend
+frontend/node_modules/
+frontend/build/
+
+# Tailwind CSS
+tailwind.config.js
+postcss.config.js
+
+# Docker
+*.env
+docker-compose.override.yml
+Dockerfile
+docker-compose.yml
+
+# Miscellaneous
+.DS_Store
+Thumbs.db
